--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: #b3e5fc;
   border-radius: 10px;
@@ -27,4 +26,12 @@ body {
   width: 31%;
   margin-left: 34%;
   margin-bottom: 2%;
+}
+.image img{
+  width: 150px;
+  border: 2px solid #000;
+  margin-left: 27%;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
